# agentic-campaign-strategist

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup_repo_layout.sh
docs/: capstone_requirements_map.md
notebooks/: 01_data_cleaning_eda.ipynb  02_features_and_labels.ipynb  03_baselines_and_lstm.ipynb  04_optimization_and_evaluation.ipynb
reports/: data_cleaning_eda_summary.md  model_optimization_summary.md  model_training_evaluation_summary.md  pipeline_analysis_summary.md
reports/drafts/: introduction_draft.md  methodology_draft.md  methods_outline.md  presentation_outline.md  project_management_plan.md  results_outline.md
reports/tables/: baseline_metrics.json  best_hyperparameters.json  coupon_rate_by_category.csv  data_summary.json  lstm_metrics.json  model_comparison.csv  optimization_results.csv  pipeline_demo_cases.csv  pipeline_demo_cases.json  top_categories.csv
scripts/: 01_data_cleaning_eda.py  02_model_training_evaluation.py  03_model_optimization.py  04_pipeline_analysis.py
src/campaign_strategist/: __init__.py  baselines.py  config.py  data.py  features.py  labels.py  model.py  pipeline.py  strategy.py  train.py  training.py  viz.py
